// Copyright 2022 The Go Protobuf Expression Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package kagadar.protoexpr.options;

import "proto/options/options.proto";

option go_package = "github.com/kagadar/go_proto_expression/protoexpr/test";

message TestFiltering {
    message SubMessage {
        int64 filterable_primitive = 1 [(filtering) = {filterable: true}];
        string unfilterable_primitive = 2 [(filtering) = {filterable: false}];
    }
    enum TestEnum {
        VALUE_0 = 0;
        VALUE_1 = 1;
    }
    SubMessage filterable_submessage = 1 [(filtering) = {filterable: true}];
    SubMessage unfilterable_submessage = 2 [(filtering) = {filterable: false}];
    SubMessage default_submessage = 3;
    string filterable_primitive = 4 [(filtering) = {filterable: true}];
    int64 unfilterable_primitive = 5 [(filtering) = {filterable: false}];
    float default_float = 6;
    bool default_bool = 7;
    TestEnum default_enum = 8;
}
